tests/ui/where-clauses/higher-ranked-fn-type.verbose.stderr
error[E0277]: the trait `Foo` is not implemented for `fn(&ReErased ())`
  --> $DIR/higher-ranked-fn-type.rs:20:5
   |
LL |     called()
   |     ^^^^^^^^ the trait `Foo` is not implemented for `fn(&ReErased ())`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/higher-ranked-fn-type.rs:6:1
   |
LL | trait Foo {
   | ^^^^^^^^^
note: required by a bound in `called`
  --> $DIR/higher-ranked-fn-type.rs:12:25
   |
LL | fn called()
   |    ------ required by a bound in this function
LL | where
LL |     for<'b> fn(&'b ()): Foo,
   |                         ^^^ required by this bound in `called`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
